src/test/fun-test/semantic/BreakOnlyInsideSwitch.java.err
Semantic error: break outside of switch statement, line 6, pos 9
