src/test/fun-test/semantic/BreakOnlyInsideSwitch.java
class Main {
    void main() {
        switch (10) {
            default: break;
        }
        break;
    }
}